Added new project in progress (portfolio page)
Work in Progress project

--- a/examples/jumbotron/portfolio.html
+++ b/examples/jumbotron/portfolio.html
@@ -37,6 +37,7 @@
 	<li>Pan Nalesnik page</li>
 	<li>Manufaktura Krzyczki page</li>
 	<li>Android Application</li>
+	<li>Sth in progress</li>
   </ul>
   </body>
 </html>
