--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -63,7 +63,7 @@
       <div class="container">
         <h1>Hello my friend, enjoy my website</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Read more! &raquo;</a></p>
       </div>
     </div>
 
@@ -73,7 +73,7 @@
         <div class="col-md-4">
           <h2>Portfolio</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="portfolio.html" role="button">View Portfolio &raquo;</a></p>
+          <p><a class="btn btn-default" href="portfolio.html" role="button">See Portfolio &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Arkanoid</h2>
@@ -83,7 +83,7 @@
         <div class="col-md-4">
           <h2>My blog</h2>
           <p>Read about my life, it's amazing.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">See details! &raquo;</a></p>
         </div>
       </div>
 
