Changed description under Arkanoid headline

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="col-md-4">
           <h2>Arkanoid</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p>Implementation of arkanoid game </p>
           <p><a class="btn btn-default" href="arkanoid.html" role="button">Play Arkanoid! &raquo;</a></p>
        </div>
         <div class="col-md-4">
